# OralSkop

./: .gitignore  README.md  demo.py  eval.py  git-dev-main-feature.md  run.py
ai/: .gitignore  COMMANDS.md  DATASETS.md  README.md  description.md  pyproject.toml  training_plan.md
ai/configs/: taxonomy.yaml
ai/configs/clf/: labels_coarse.yaml  labels_fine.yaml  manifest_clf.yaml  qlora_dinov2.yaml
ai/configs/data/: alphadent.yaml  bmc_oral_health.yaml  roboflow_example.yaml
ai/configs/det/: box_label_map_coarse.yaml  qlora_dinov2_detr.yaml
ai/configs/train/: deeplabv3plus.yaml  dinov2_seg.yaml  seg_torch.yaml  segformer.yaml  yolo11_seg.yaml
ai/data/: README.md
ai/data/alphadent/: README.md
ai/data/bmc_oral_health/: README.md
ai/data/merged/: README.md
ai/dataset/AlphaDent/: .gitignore  dataset.yaml
ai/datasets/: README.md
ai/datasets/AlphaDent/: README.md
ai/datasets/BMCOralHealth/: README.md
ai/datasets/zip/: README.md
ai/models/configs/: dataset.yaml
ai/models/sam2/: pipeline.py
ai/models/unet/: predict.py  train.py
ai/models/yolo/: predict.py  train.py
ai/notebooks/: serve_api.ipynb
ai/oralskop/: cli.py  config.py  pipeline.py
ai/oralskop/bench/: __init__.py  semantic_from_yolo.py
ai/oralskop/clf/: __init__.py  dataset.py  eval.py  metrics.py  model.py  train.py  vocab.py
ai/oralskop/data/: build.py  coverage.py  describe.py  prepare.py  split.py  taxonomy.py  verify.py
ai/oralskop/data/converters/: alphadent.py  base.py  mask_semantic.py  registry.py  roboflow.py
ai/oralskop/det/: __init__.py  dataset.py  eval.py  metrics.py  model.py  train.py
ai/oralskop/eval/: evaluate.py
ai/oralskop/serve/: __init__.py  app.py  chat.py  model.py  notebook.py
ai/oralskop/torchseg/: dataset.py  lora.py  losses.py  test.py  train.py
ai/oralskop/torchseg/model/: __init__.py  dinov2.py  factory.py  unet.py
ai/oralskop/train/: train.py
ai/oralskop/viz/: visualize.py
ai/scripts/: apptainer.def  bootstrap.sh  download_alphadent.sh  download_bmc.py  download_data.py  prepare_alphadent.py  train.sbatch
ai/src/oralskop/torchseg/: dataset.py  model.py
ai/src/oralskop/viz/: visualize.py
backend/: .env.example  config.py  dependencies.py  main.py  requirements.txt
backend/mock/: mock_response.py
backend/routers/: auth.py  chat.py  history.py  screenings.py
backend/services/: ai_client.py  s3_service.py
data_info/: inventaire_master.xlsx  ontology_mapping.csv  ontology_oralskop.html
frontend/: config.js  dentist.html  index.html
frontend-next/: package-lock.json  package.json  tailwind.config.ts
frontend-next/components/: ArcadeSVG.tsx  BottomNav.tsx  DentalArch.tsx  DentistModal.tsx  DetectionCard.tsx  Header.tsx  LoadingOverlay.tsx  Logo.tsx  SegmentedToggle.tsx  SeverityBadge.tsx  Toast.tsx  ViewfinderCard.tsx
frontend-next/lib/: api.ts  supabase.ts  types.ts
frontend-next/pages/: _app.tsx  _document.tsx  dentist.tsx  guide.tsx  index.tsx  login.tsx  patient.tsx  profile.tsx
frontend-next/styles/: globals.css
models/: dataset.yaml  train.py
models/sam2/: pipeline.py
models/unet/: predict.py  train.py
models/yolo/: predict.py  train.py
scripts/: download_data.sh
tasks/: io.md
